[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "quome"
version = "0.1.0"
description = "Python SDK for Quome sandboxes"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "Apache-2.0" }
authors = [{ name = "Quome" }]
dependencies = ["httpx>=0.27"]

[project.optional-dependencies]
ws = ["websockets>=12"]
dev = ["pytest", "pytest-asyncio", "respx", "mypy", "ruff"]

[project.urls]
Homepage = "https://quome.studio"
Repository = "https://github.com/quome-cloud/quome-sdk-python"
Issues = "https://github.com/quome-cloud/quome-sdk-python/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/quome"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.mypy]
strict = true
python_version = "3.10"
files = ["src"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
